sec/dex/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex-route
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cluster-gateway
    namespace: network
    sectionName: https
  hostnames:
  - "dex.${INFRA_DOMAIN}"
  rules:
  - backendRefs:
    - group: ''
      kind: Service
      name: dex
      port: 5556
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
